[metadata]
name = physfix
author = Ryan Wong
url = https://github.com/squaresLab/physfix
description = Automatically repairing unit inconsistencies detected by Phys
include_package_data = True
version = "0.0.1"
license = Apache License, Version 2.0
classifiers =
  Natural Language :: English
  Intended Audience :: Developers
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7

[options]
python_requires = >= 3.7
install_requires =
  attrs ~= 19.3.0
  pyyaml ~= 5.3.1
package_dir =
  =src
packages = find:

[options.packages.find]
where = src